Fix not-logged in search bar issue and its tile spacing issue

--- a/frontend/src/components/RecipeBox/RecipeBoxTile.scss
+++ b/frontend/src/components/RecipeBox/RecipeBoxTile.scss
@@ -4,7 +4,6 @@
 .recipe-item-navlink {
     text-decoration: none;
     color: inherit;
-    width: 235px;
 }
 .saved-index-card-wrapper {
     cursor: pointer;
